Version 1.2.2
-------------
Fixed: a serious issue with saving thing, weapon and ammo names that could cause no names to be saved and the wrong names loaded when opening a second patch. Thanks to Da Werecat.

Version 1.2.1
-------------
Added: support the RandomJump action in state previews.
Added: Extended DehackEd configuration with the extra things and empty states from Doom Retro. Crispy Doom also supports these.
Added: state actions that spawn things (like missiles from monster attacks) will now play that thing's sound during a preview.
Fixed: unused state parameter descriptions would not be updated when an action using them was selected.
Fixed: added missing things to the Doom Retro configuration. Thanks to VGA.
Changed: WAD reloading is now faster and doesn't reset the UI state.

Version 1.2.0
-------------
Added: state animation preview (with sounds) by pressing ~ on a state or using the new state context menu. Pressing ~ again inside the animation preview will restart it. Right-clicking a thing or weapon state from their respective dialogs will preview it directly.
Added: linking states together can now be done by selecting them, right-clicking and selecting a link option (or use the respective shortcut key). Linking is done in the order of selection.
Added: an option to clear out all selected states from the state context menu.
Added: an option to clear out a thing's properties from a thing's context menu.
Added: DOOM Retro "Gib health" thing property.
Added: barebones patch merging feature by loading a patch 'over' the current one.
Fixed: state and thing copy and paste operations were much slower than they should to be.
Changed: sprite selection dialog now shows sprites at 2x scale.
Changed: always display a state's "unused" parameters since these actually affect a weapon sprite's offset even in vanilla Doom.
Changed: updated to PyAudio 0.2.11.
Changed: monospace font is now the more modern DejaVu Sans Mono.

Version 1.1.2
-------------