@@ -51,7 +51,8 @@
 		"161744": {
 			"description": "Standard walking code pointer.\n\nThis chases the target object, regardless of a direct line of sight.",
 			"name": "Chase",
-			"type": 0
+			"type": 0,
+			"setsMomentum": true
 		},
 		"162224": {
 			"description": "Turn to face the player's direction.",
@@ -149,7 +150,8 @@
 		"164160": {
 			"description": "Arch-Vile walking code pointer.\n\nChecks to see if there is a dead monster in front of the Arch-Vile and ressurects it if so.",
 			"name": "VileChase",
-			"type": 0
+			"type": 0,
+			"setsMomentum": true
 		},
 		"164496": {
 			"description": "Play sound 'vilatk'.",
