@@ -27,7 +27,8 @@
 		"Chase": {
 			"name": "Chase",
 			"description": "Standard walking code pointer.\n\nThis chases the target object, regardless of a direct line of sight.",
-			"type": 0
+			"type": 0,
+			"setsMomentum": true
 		},
 		"FaceTarget": {
 			"name": "FaceTarget",
@@ -125,7 +126,8 @@
 		"VileChase": {
 			"name": "VileChase",
 			"description": "Arch-Vile walking code pointer.\n\nChecks to see if there is a dead monster in front of the Arch-Vile and ressurects it if so.",
-			"type": 0
+			"type": 0,
+			"setsMomentum": true
 		},
 		"VileStart": {
 			"name": "VileStart",
